@@ -7,8 +7,8 @@
  *
  * -----------------------------------------------------------------
  * File:          $RCSfile: Math.h,v $
- * Date modified: $Date: 2002-09-15 21:09:13 $
- * Version:       $Revision: 1.31 $
+ * Date modified: $Date: 2002-11-26 05:10:28 $
+ * Version:       $Revision: 1.32 $
  * -----------------------------------------------------------------
  *
  *********************************************************** ggt-head end */
@@ -502,6 +502,39 @@ inline void lerp( T& result, const U& lerp, const T& a, const T& b )
     result = ((U)a) + (((U)size) * lerp);
 }
 /** @} */
+
+/**
+ * Uses the quadratic formula to compute the 2 roots of the given 2nd degree
+ * polynomial in the form of Ax^2 + Bx + C.
+ *
+ * @param r1   set to the first root
+ * @param r2   set to the second root
+ * @param a    the coefficient to x^2
+ * @param b    the coefficient to x^1
+ * @param c    the coefficient to x^0
+ *
+ * @return  true if both r1 and r2 are real; false otherwise
+ */
+template <class T>
+inline bool quadraticFormula(T& r1, T& r2, const T& a, const T& b, const T& c)
+{
+   const T q = b*b - T(4)*a*c;
+
+   // the result has real roots
+   if (q >= 0)
+   {
+      const T sq = gmtl::Math::sqrt(q);
+      const T d = T(1) / (T(2) * a);
+      r1 = (-b + sq) * d;
+      r2 = (-b - sq) * d;
+      return true;
+   }
+   // the result has complex roots
+   else
+   {
+      return false;
+   }
+}
 
 } // end namespace Math
 } // end namespace gmtl
